# QtNativeTr

./: .gitignore  CMakeLists.txt  README.md  doxygen.conf
tests/: CMakeLists.txt  tstMain.cpp
